Make comments no longer line-break in middle of words fixes #1

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -36,6 +36,7 @@
       padding: 5px;
       background: none;
       border: none;
+      word-break: normal;
     }
     .comment {
       margin-left: 40px;
